--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,14 @@
 
 .background-image-container {
   width: 100%;
-  height: 50rem;
+  height: 45rem;
   background-color: var(--primary-color-dark);
   margin: 0;
+  border-radius: var(--br-2);
+}
+
+.banner {
+  width: 100%;
+  height: 100%;
   border-radius: var(--br-2);
 }
