--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 
 .background-image-container {
   width: 100%;
-  height: 45rem;
+  height: 70vh;
   background-color: var(--primary-color-dark);
-  margin: 0;
+  /* margin: 0; */
   border-radius: var(--br-2);
 }
 
@@ -21,4 +21,29 @@
   width: 100%;
   height: 100%;
   border-radius: var(--br-2);
+  opacity: 0.8;
+}
+
+.slide-active {
+  display: block;
+}
+.slide-inactive {
+  display: none;
+}
+
+.banner-dot {
+  font-size: 1.4rem;
+  color: var(--secondary-color);
+  position: relative;
+  top: -5rem;
+}
+.active-dot {
+  color: var(--secondary-background-color-light);
+}
+
+.banner-nav-btn-container {
+  font-size: 2.5rem;
+  color: var(--secondary-background-color-light);
+  position: relative;
+  top: -35rem;
 }
