--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 .grid-container {
 	display: grid;
+  width: 100%;
+  height: 100vh;
 	grid: repeat(12, 100px);
 	margin: var(--m-0) var(--margin-auto);
+}
+
+.grid-container .header {
+	width: 100%;
+  height: 100px;
 }
 
 .grid-container .main {
@@ -13,7 +20,6 @@
   width: 100%;
   height: 70vh;
   background-color: var(--primary-color-dark);
-  /* margin: 0; */
   border-radius: var(--br-2);
 }
 
@@ -54,7 +60,9 @@
   border-bottom: var(--b-0);
 }
 
-
+.focused > .textbox-label {
+	background: var(--secondary-background-color);
+}
 
 .switch {
   position: relative;
@@ -79,6 +87,13 @@ input:checked + .slider::before {
   transform: translateX(3rem);
 }
 
+.horizontal-tabs-content {
+	display: block;
+}
+
+.vertical-tabs-content {
+  display: block;
+}
 @media screen and (max-width: 1180px) {
   .header-nav-icon {
       display: none;
