--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,21 @@
 	display: grid;
   width: 100%;
   height: 100vh;
-	grid: repeat(12, 100px);
+  grid-template-rows: repeat(12,1fr);
+	grid-template-columns: auto;
 	margin: var(--m-0) var(--margin-auto);
 }
 
 .grid-container .header {
 	width: 100%;
-  height: 100px;
 }
 
 .grid-container .main {
 	grid-column: 1/13;
 	width: 100%;
+  min-height: 100vh;
+  max-height: max-content;
+  overflow: visible;
 }
 
 .background-image-container {
@@ -118,6 +121,34 @@ input:checked + .slider::before {
   grid-column: 1/13;
   grid-row: 1/13;
 }
+
+.modal {
+	padding: var(--p-0);
+	z-index: var(--max-z-index);
+
+}
+.modal-background {
+  width: 100%;
+  height: 100%;	
+  grid-column: 1/13;
+  grid-row: 1/13;
+	background-color: var(--tertiary-color);
+	opacity: 0.5;
+  z-index: 8;
+}
+.modal-content {
+  grid-column: 2/12;
+  grid-row: 1/13;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+	z-index: var(--max-z-index);
+}
+
+.grid-container .modal {
+  grid-column: 1/13;
+  grid-row: 1/13;
+}
 @media screen and (max-width: 1180px) {
   .header-nav-icon {
       display: none;
@@ -152,4 +183,40 @@ input:checked + .slider::before {
   .header-theme-small-icon {
     display: block;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .grid-container .header {
+    overflow: visible;
+  }
+}
+/* Habits page */
+.category-container {
+  height: 100%;
+  width: 25%;
+}
+
+.habits-container {
+  height: 100%;
+  width: 75%;
+}
+
+.grid-container .habits-content-container {
+  padding: 0;
+}
+
+.filters {
+	position: fixed;
+	opacity: 0;
+	pointer-events: none;
+}
+
+.habit-form-container {
+  background: var(--primary-color);
+
+}
+
+.habit-form-container .textbox-label {
+  background: var(--primary-color);
+
 }
