feat: Habits Card added

--- a/src/index.css
+++ b/src/index.css
@@ -137,12 +137,8 @@ input:checked + .slider::before {
   z-index: 8;
 }
 .modal-content {
-  grid-column: 2/12;
-  grid-row: 1/13;
   position: absolute;
-  top: 50%;
-  left: 50%;
-	z-index: var(--max-z-index);
+  z-index: var(--max-z-index);
 }
 
 .grid-container .modal {
@@ -212,11 +208,42 @@ input:checked + .slider::before {
 }
 
 .habit-form-container {
-  background: var(--primary-color);
+  background: var(--secondary-background-color);
+  width: 32rem;
+}
 
+.circle-container {
+  width: 4rem;
+  height: 4rem;
+  border-radius: var(--br-circle);
+  background: var(--tertiary-color);
+  color: var(--cta-color);
+}
+
+.icons {
+  font-size: 2rem;
+}
+
+.circle-container:hover {
+  background: var(--cta-color);
+  color: var(--tertiary-color);
+  border: 0.1rem solid var(--tertiary-color);
+}
+
+.icon-selected {
+  background: var(--cta-color);
+  color: var(--tertiary-color);
+  border: 0.1rem solid var(--tertiary-color);
+}
+
+.color-selected {
+  border: 0.3rem solid var(--tertiary-color);
+}
+
+.habit-form-container .basic-card {
+  background-color: var(--primary-color);
 }
 
 .habit-form-container .textbox-label {
-  background: var(--primary-color);
-
+  background-color: var(--primary-color);
 }
