--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@
   font-size: 2.5rem;
   color: var(--secondary-background-color-light);
   position: relative;
-  top: -40vh;
+  top: -38vh;
+  margin: 0 calc(3*var(--m-5));
 }
 
 .rui-main--heading-container, .rui-main--sub-heading {
@@ -247,7 +248,6 @@ input:checked + .slider::before {
   margin: var(--m-5);
   border-radius: var(--br-2);
   padding: 1rem;
-  /* box-shadow: 1rem 1rem 1rem var(--shadow-color); */
 }
 
 .react-calendar__navigation {
